--- a/AlgorithmGossip/GrayCode.htm
+++ b/AlgorithmGossip/GrayCode.htm
@@ -33,7 +33,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -44,7 +44,7 @@
   
   
   
-  <title>®æ¹p½X¡]Gray Code¡^</title>
+  <title>æ ¼é›·ç¢¼ï¼ˆGray Codeï¼‰</title>
 </head>
 
 
@@ -61,15 +61,15 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: ®æ¹p½X¡]Gray Code¡^</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip: æ ¼é›·ç¢¼ï¼ˆGray Codeï¼‰</a></h1>
 
 
 
 
 
-<h2>»¡©ú</h2>
+<h2>èªªæ˜</h2>
 
-Gray Code¬O¤@­Ó¼Æ¦C¶°¦X¡A¨C­Ó¼Æ¨Ï¥Î¤G¶i¦ì¨Óªí¥Ü¡A°²³]¨Ï¥În¦ì¤¸¨Óªí¥Ü¨C­Ó¼Æ¦n¤F¡A¥ô¨â­Ó¼Æ¤§¶¡¥u¦³¤@­Ó¦ì¤¸­È¤£¦P¡A¨Ò¦p¥H¤U¬°3¦ì¤¸ªºGray Code¡G<br>
+Gray Codeæ˜¯ä¸€å€‹æ•¸åˆ—é›†åˆï¼Œæ¯å€‹æ•¸ä½¿ç”¨äºŒé€²ä½ä¾†è¡¨ç¤ºï¼Œå‡è¨­ä½¿ç”¨nä½å…ƒä¾†è¡¨ç¤ºæ¯å€‹æ•¸å¥½äº†ï¼Œä»»å…©å€‹æ•¸ä¹‹é–“åªæœ‰ä¸€å€‹ä½å…ƒå€¼ä¸åŒï¼Œä¾‹å¦‚ä»¥ä¸‹ç‚º3ä½å…ƒçš„Gray Codeï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">000 001 011 010 110 111 101 100</span><br>
 
@@ -77,7 +77,7 @@ Gray Code¬O¤@­Ó¼Æ¦C¶°¦X¡A¨C­Ó¼Æ¨Ï¥Î¤G¶i¦ì¨Óªí¥Ü¡A°²³]¨Ï¥În¦ì¤¸¨Óªí¥Ü¨C­Ó¼Æ¦n¤F¡A
 
 <br>
 
-¥Ñ©w¸q¥i¥Hª¾¹D¡AGray Codeªº¶¶§Ç¨Ã¤£¬O°ß¤@ªº¡A¨Ò¦p±N¤W­±ªº¼Æ¦C¤Ï¹L¨Ó¼g¡A¤]¬O¤@²ÕGray Code¡G<br>
+ç”±å®šç¾©å¯ä»¥çŸ¥é“ï¼ŒGray Codeçš„é †åºä¸¦ä¸æ˜¯å”¯ä¸€çš„ï¼Œä¾‹å¦‚å°‡ä¸Šé¢çš„æ•¸åˆ—åéä¾†å¯«ï¼Œä¹Ÿæ˜¯ä¸€çµ„Gray Codeï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">100 101 111 110 010 011 001 000</span><br>
 
@@ -85,11 +85,11 @@ Gray Code¬O¤@­Ó¼Æ¦C¶°¦X¡A¨C­Ó¼Æ¨Ï¥Î¤G¶i¦ì¨Óªí¥Ü¡A°²³]¨Ï¥În¦ì¤¸¨Óªí¥Ü¨C­Ó¼Æ¦n¤F¡A
 
 <br>
 
-Gray Code¬O¥Ñ¨©º¸¹êÅç«ÇªºFrank Gray¦b1940¦~¥N´£¥Xªº¡A¥Î¨Ó¦b¨Ï¥ÎPCM¡]Pusle Code Modulation¡^¤èªk¶Ç°e°T¸¹®ÉÁ×§K¥X¿ù¡A¨Ã©ó1953¦~¤T¤ë¤Q¤C¤é¨ú±o¬ü°ê±M§Q¡C<br>
+Gray Codeæ˜¯ç”±è²çˆ¾å¯¦é©—å®¤çš„Frank Grayåœ¨1940å¹´ä»£æå‡ºçš„ï¼Œç”¨ä¾†åœ¨ä½¿ç”¨PCMï¼ˆPusle Code Modulationï¼‰æ–¹æ³•å‚³é€è¨Šè™Ÿæ™‚é¿å…å‡ºéŒ¯ï¼Œä¸¦æ–¼1953å¹´ä¸‰æœˆåä¸ƒæ—¥å–å¾—ç¾åœ‹å°ˆåˆ©ã€‚<br>
 
-<h2>¸Ñªk</h2>
+<h2>è§£æ³•</h2>
 
-¥Ñ©óGray Code¬Û¾F¨â¼Æ¤§¶¡¥u§ïÅÜ¤@­Ó¦ì¤¸¡A©Ò¥H¥iÆ[ ¹îGray Code±q1ÅÜ0©Î±q0ÅÜ1®Éªº¦ì¸m¡A°²³]¦³4¦ì¤¸ªºGray Code¦p¤U¡G<br>
+ç”±æ–¼Gray Codeç›¸é„°å…©æ•¸ä¹‹é–“åªæ”¹è®Šä¸€å€‹ä½å…ƒï¼Œæ‰€ä»¥å¯è§€ å¯ŸGray Codeå¾1è®Š0æˆ–å¾0è®Š1æ™‚çš„ä½ç½®ï¼Œå‡è¨­æœ‰4ä½å…ƒçš„Gray Codeå¦‚ä¸‹ï¼š<br>
 
 <div style="margin-left: 40px;"><span style="font-weight: bold; font-family: Courier New,Courier,monospace;">0000 0001 0011 0010 0110 0111 0101 0100</span><br style="font-weight: bold; font-family: Courier New,Courier,monospace;">
 
@@ -99,28 +99,28 @@ Gray Code¬O¥Ñ¨©º¸¹êÅç«ÇªºFrank Gray¦b1940¦~¥N´£¥Xªº¡A¥Î¨Ó¦b¨Ï¥ÎPCM¡]Pusle Code M
 
 <br>
 
-Æ[¹î©_¼Æ¶µªºÅÜ¤Æ®É¡A§Ú­Ìµo²{µL½×¥¦¬O²Ä´X­ÓGray Code¡A¥Ã»·¥u§ïÅÜ³Ì¥kÃäªº¦ì¤¸¡A¦pªG¬O1´N§ï¬°0¡A¦pªG¬O0´N§ï¬°1¡C<br>
+è§€å¯Ÿå¥‡æ•¸é …çš„è®ŠåŒ–æ™‚ï¼Œæˆ‘å€‘ç™¼ç¾ç„¡è«–å®ƒæ˜¯ç¬¬å¹¾å€‹Gray Codeï¼Œæ°¸é åªæ”¹è®Šæœ€å³é‚Šçš„ä½å…ƒï¼Œå¦‚æœæ˜¯1å°±æ”¹ç‚º0ï¼Œå¦‚æœæ˜¯0å°±æ”¹ç‚º1ã€‚<br>
 
 <br>
 
-Æ[¹î°¸¼Æ¶µªºÅÜ¤Æ®É¡A§Ú­Ìµo²{©Ò§ïÅÜªº¦ì¤¸¡A¬O¥Ñ¥kÃäºâ¨Ó²Ä¤@­Ó1ªº¥ªÃä¦ì¤¸¡C<br>
+è§€å¯Ÿå¶æ•¸é …çš„è®ŠåŒ–æ™‚ï¼Œæˆ‘å€‘ç™¼ç¾æ‰€æ”¹è®Šçš„ä½å…ƒï¼Œæ˜¯ç”±å³é‚Šç®—ä¾†ç¬¬ä¸€å€‹1çš„å·¦é‚Šä½å…ƒã€‚<br>
 
 <br>
 
-¥H¤W¨â­ÓÅÜ¤Æ³W«h¬O©T©wªº¡AµL½×¦ì¤¸¼Æ¬°¦ó¡F©Ò¥H¥u­n§PÂ_¦ì¤¸ªº¦ì¸m¬O©_¼ÆÁÙ¬O°¸¼Æ¡A´N¥i¥H¨M©w­n§ïÅÜ­ş¤@­Ó¦ì¤¸ªº­È¡A¬°¤Fµ{¦¡¼¶¼g¤è«K¡A±N°}¦C¯Á¤Ş 0·í§@³Ì¥kÃäªº­È¡A¦Ó¦b¦C¦Lµ²ªG®É¡A¬O¥Ñ¯Á¤Ş¼Æ¦r¤jªº¶}©l¤Ï¦V¦C¦L¡C<br>
+ä»¥ä¸Šå…©å€‹è®ŠåŒ–è¦å‰‡æ˜¯å›ºå®šçš„ï¼Œç„¡è«–ä½å…ƒæ•¸ç‚ºä½•ï¼›æ‰€ä»¥åªè¦åˆ¤æ–·ä½å…ƒçš„ä½ç½®æ˜¯å¥‡æ•¸é‚„æ˜¯å¶æ•¸ï¼Œå°±å¯ä»¥æ±ºå®šè¦æ”¹è®Šå“ªä¸€å€‹ä½å…ƒçš„å€¼ï¼Œç‚ºäº†ç¨‹å¼æ’°å¯«æ–¹ä¾¿ï¼Œå°‡é™£åˆ—ç´¢å¼• 0ç•¶ä½œæœ€å³é‚Šçš„å€¼ï¼Œè€Œåœ¨åˆ—å°çµæœæ™‚ï¼Œæ˜¯ç”±ç´¢å¼•æ•¸å­—å¤§çš„é–‹å§‹åå‘åˆ—å°ã€‚<br>
 
 <br>
 
-±N2¦ì¤¸ªºGray Code·í§@¥­­±®y¼Ğ¨Ó¬İ¡A¥i¥Hºc¦¨¤@­Ó¥|Ãä§Î¡A±z¥i¥Hµo²{±q¥ô¤@³»ÂI¥Xµo¡AÂ¶¥|Ãä§Î©PªøÂ¶¤@°é¡A©Ò¸g¹Lªº³»ÂI®y¼Ğ´N¬O¤@²ÕGray Code¡A©Ò¥H±z¥i¥H±o¨ì¥|²ÕGray Code¡C<br>
+å°‡2ä½å…ƒçš„Gray Codeç•¶ä½œå¹³é¢åº§æ¨™ä¾†çœ‹ï¼Œå¯ä»¥æ§‹æˆä¸€å€‹å››é‚Šå½¢ï¼Œæ‚¨å¯ä»¥ç™¼ç¾å¾ä»»ä¸€é ‚é»å‡ºç™¼ï¼Œç¹å››é‚Šå½¢å‘¨é•·ç¹ä¸€åœˆï¼Œæ‰€ç¶“éçš„é ‚é»åº§æ¨™å°±æ˜¯ä¸€çµ„Gray Codeï¼Œæ‰€ä»¥æ‚¨å¯ä»¥å¾—åˆ°å››çµ„Gray Codeã€‚<br>
 
 <br>
 
-¦P¼Ëªº±N3¦ì¤¸ªºGray Code·í§@¥­­±®y¼Ğ¨Ó¬İªº¸Ü¡A¥i¥Hºc¦¨¤@­Ó¥¿¥ß¤èÅé¡A¦pªG±z¥i¥H±q¥ô¤@³»ÂI¥Xµo¡A±N©Ò¦³ªºÃäªø¨«¹L¡A¨Ã¤£­«½Æ¸g¹L³»ÂIªº¸Ü¡A©Ò¸g¹Lªº³»ÂI®y¼Ğ¶¶§Ç¤§²Õ¦X¤]´N¬O¤@²ÕGray Code¡C <br>
+åŒæ¨£çš„å°‡3ä½å…ƒçš„Gray Codeç•¶ä½œå¹³é¢åº§æ¨™ä¾†çœ‹çš„è©±ï¼Œå¯ä»¥æ§‹æˆä¸€å€‹æ­£ç«‹æ–¹é«”ï¼Œå¦‚æœæ‚¨å¯ä»¥å¾ä»»ä¸€é ‚é»å‡ºç™¼ï¼Œå°‡æ‰€æœ‰çš„é‚Šé•·èµ°éï¼Œä¸¦ä¸é‡è¤‡ç¶“éé ‚é»çš„è©±ï¼Œæ‰€ç¶“éçš„é ‚é»åº§æ¨™é †åºä¹‹çµ„åˆä¹Ÿå°±æ˜¯ä¸€çµ„Gray Codeã€‚ <br>
 
 
 <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 
 <ul>
@@ -131,7 +131,7 @@ Gray Code¬O¥Ñ¨©º¸¹êÅç«ÇªºFrank Gray¦b1940¦~¥N´£¥Xªº¡A¥Î¨Ó¦b¨Ï¥ÎPCM¡]Pusle Code M
 </ul>
 
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define MAXBIT 20 <br>#define TRUE 1 <br>#define CHANGE_BIT(x) x = ((x) == '0' ? '1' : '0') <br>#define NEXT(x) x = (1 - (x)) <br><br>int main(void) { <br>    char digit[MAXBIT]; <br>    int i, bits, odd; <br><br>    printf("¿é¤J¦ì¤¸¼Æ¡G"); <br>    scanf("%d", &amp;bits); <br><br>    for(i = 0; i &lt; bits; i++) { <br>        digit[i] = '0'; <br>        printf("0"); <br>    } <br><br>    printf("\n"); <br><br>    odd = TRUE; <br><br>    while(1) { <br>        if(odd) <br>            CHANGE_BIT(digit[0]); <br>        else { <br>            // ­pºâ²Ä¤@­Ó1ªº¦ì¸m <br>            for(i = 0; i &lt; bits &amp;&amp; digit[i] == '0'; i++) ; <br>            if(i == bits - 1) // ³Ì«á¤@­ÓGray Code <br>                 break; <br>            CHANGE_BIT(digit[i+1]); <br>        } <br>        for(i = bits - 1; i &gt;= 0; i--) <br>            printf("%c", digit[i]); <br><br>        printf("\n"); <br>        NEXT(odd); <br>    } <br>    return 0; <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>#define MAXBIT 20 <br>#define TRUE 1 <br>#define CHANGE_BIT(x) x = ((x) == '0' ? '1' : '0') <br>#define NEXT(x) x = (1 - (x)) <br><br>int main(void) { <br>    char digit[MAXBIT]; <br>    int i, bits, odd; <br><br>    printf("è¼¸å…¥ä½å…ƒæ•¸ï¼š"); <br>    scanf("%d", &amp;bits); <br><br>    for(i = 0; i &lt; bits; i++) { <br>        digit[i] = '0'; <br>        printf("0"); <br>    } <br><br>    printf("\n"); <br><br>    odd = TRUE; <br><br>    while(1) { <br>        if(odd) <br>            CHANGE_BIT(digit[0]); <br>        else { <br>            // è¨ˆç®—ç¬¬ä¸€å€‹1çš„ä½ç½® <br>            for(i = 0; i &lt; bits &amp;&amp; digit[i] == '0'; i++) ; <br>            if(i == bits - 1) // æœ€å¾Œä¸€å€‹Gray Code <br>                 break; <br>            CHANGE_BIT(digit[i+1]); <br>        } <br>        for(i = bits - 1; i &gt;= 0; i--) <br>            printf("%c", digit[i]); <br><br>        printf("\n"); <br>        NEXT(odd); <br>    } <br>    return 0; <br>} <br></pre>
 
 
 
@@ -143,7 +143,7 @@ Gray Code¬O¥Ñ¨©º¸¹êÅç«ÇªºFrank Gray¦b1940¦~¥N´£¥Xªº¡A¥Î¨Ó¦b¨Ï¥ÎPCM¡]Pusle Code M
 </ul>
 
 
-<pre>public class GrayCode {<br>    private char[] digit;<br>    private boolean first;<br>    private boolean odd;<br>    private int count;<br>    <br>    public GrayCode(int length) {<br>        digit = new char[length];<br>        for(int i = 0; i &lt; length; i++) {<br>            digit[i] = '0';<br>        }<br>        <br>        first = true;<br>        odd = true;<br>    }<br>    <br>    public boolean hasNext() {<br>        // ­pºâ²Ä¤@­Ó1ªº¦ì¸m<br>        for(count = 0; <br>            (count &lt; digit.length) &amp;&amp; (digit[count] == '0');<br>             count++) ;        <br>        return count != digit.length - 1;<br>    }<br>    <br>    public char[] next() {<br>        if(first) {<br>            first = false;<br>            return digit;<br>        }<br>        <br>        if(odd) <br>            chargeBit(digit, 0); <br>        else { <br>            //  ³Ì«á¤@­ÓGray Code ¶Ü<br>            if(hasNext())<br>                chargeBit(digit, count+1);  <br>        }<br>        <br>        odd = ((odd == true) ? false : true);<br>        <br>        return digit;<br>    }<br>    <br>    private void chargeBit(char[] digit, int i) {<br>        digit[i] = ((digit[i] == '0') ? '1' : '0');<br>    }<br>    <br>    public static void main(String[] args) {<br>        GrayCode code = new GrayCode(4);<br>        <br>        while(code.hasNext()) {<br>            char[] digit = code.next();<br>            for(int i = digit.length - 1; i &gt;= 0; i--) <br>                System.out.print(digit[i]);<br>            System.out.println();<br>        }<br>    }<br>} </pre>
+<pre>public class GrayCode {<br>    private char[] digit;<br>    private boolean first;<br>    private boolean odd;<br>    private int count;<br>    <br>    public GrayCode(int length) {<br>        digit = new char[length];<br>        for(int i = 0; i &lt; length; i++) {<br>            digit[i] = '0';<br>        }<br>        <br>        first = true;<br>        odd = true;<br>    }<br>    <br>    public boolean hasNext() {<br>        // è¨ˆç®—ç¬¬ä¸€å€‹1çš„ä½ç½®<br>        for(count = 0; <br>            (count &lt; digit.length) &amp;&amp; (digit[count] == '0');<br>             count++) ;        <br>        return count != digit.length - 1;<br>    }<br>    <br>    public char[] next() {<br>        if(first) {<br>            first = false;<br>            return digit;<br>        }<br>        <br>        if(odd) <br>            chargeBit(digit, 0); <br>        else { <br>            //  æœ€å¾Œä¸€å€‹Gray Code å—<br>            if(hasNext())<br>                chargeBit(digit, count+1);  <br>        }<br>        <br>        odd = ((odd == true) ? false : true);<br>        <br>        return digit;<br>    }<br>    <br>    private void chargeBit(char[] digit, int i) {<br>        digit[i] = ((digit[i] == '0') ? '1' : '0');<br>    }<br>    <br>    public static void main(String[] args) {<br>        GrayCode code = new GrayCode(4);<br>        <br>        while(code.hasNext()) {<br>            char[] digit = code.next();<br>            for(int i = digit.length - 1; i &gt;= 0; i--) <br>                System.out.print(digit[i]);<br>            System.out.println();<br>        }<br>    }<br>} </pre>
 
 <br>
 
