--- a/AlgorithmGossip/QueueByArray.htm
+++ b/AlgorithmGossip/QueueByArray.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>¦î¦C - ¨Ï¥Î°}¦C¹ê§@</title>
+  <title>ä½‡åˆ— - ä½¿ç”¨é™£åˆ—å¯¦ä½œ</title>
 </head>
 
 
@@ -51,43 +51,43 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;¦î¦C - ¨Ï¥Î°}¦C¹ê§@</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;ä½‡åˆ— - ä½¿ç”¨é™£åˆ—å¯¦ä½œ</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
-¦î¦C¬O¤@ºØ¥ı¶i¥ı¥Xªº¸ê®Æµ²ºc¡A·Q¹³±z¦bºŞ¤l¤¤©ñ¤J²y¡A³Ì¥ı©ñ¤Jªº²y¦b¥t¤@ºİ·|³Ì¥ı¶]¥X¨Ó¡A¦b³oÃä¤¶²Ğ¦p¦ó¨Ï¥Î°}¦C¨Ó¹ê§@¦î¦C¡C<br>
-<h2>¸Ñªk</h2>
-¨Ï¥Î°}¦C¨Ó¹ê§@¦î¦C¡A§Ú­Ì¥²¶·«O¯d¨â­ÓºX¼Ğ¡A°²³]front«ü¦V¦î¦Cªº«eºİ¡Arear¦V¦î¦Cªº«áºİ¡A§Ú­Ì¨C¦¸±q¦î¦C«áºİ¥[¤J¤@­Ó¸ê®Æ¡Arear´N¥[1«ü¦V³Ì«á¤@­Ó¸ê®Æ¡A¨C¦¸±q¦î¦C«eºİ¨ú¥X¤@­Ó¸ê®Æ¡Afront´N¥[1«ü¦V¦î¦Cªº³Ì«eºİ¡A¦p¤U¹Ï©Ò¥Ü¡G<br>
+<h2>èªªæ˜</h2>
+ä½‡åˆ—æ˜¯ä¸€ç¨®å…ˆé€²å…ˆå‡ºçš„è³‡æ–™çµæ§‹ï¼Œæƒ³åƒæ‚¨åœ¨ç®¡å­ä¸­æ”¾å…¥çƒï¼Œæœ€å…ˆæ”¾å…¥çš„çƒåœ¨å¦ä¸€ç«¯æœƒæœ€å…ˆè·‘å‡ºä¾†ï¼Œåœ¨é€™é‚Šä»‹ç´¹å¦‚ä½•ä½¿ç”¨é™£åˆ—ä¾†å¯¦ä½œä½‡åˆ—ã€‚<br>
+<h2>è§£æ³•</h2>
+ä½¿ç”¨é™£åˆ—ä¾†å¯¦ä½œä½‡åˆ—ï¼Œæˆ‘å€‘å¿…é ˆä¿ç•™å…©å€‹æ——æ¨™ï¼Œå‡è¨­frontæŒ‡å‘ä½‡åˆ—çš„å‰ç«¯ï¼Œrearå‘ä½‡åˆ—çš„å¾Œç«¯ï¼Œæˆ‘å€‘æ¯æ¬¡å¾ä½‡åˆ—å¾Œç«¯åŠ å…¥ä¸€å€‹è³‡æ–™ï¼Œrearå°±åŠ 1æŒ‡å‘æœ€å¾Œä¸€å€‹è³‡æ–™ï¼Œæ¯æ¬¡å¾ä½‡åˆ—å‰ç«¯å–å‡ºä¸€å€‹è³‡æ–™ï¼Œfrontå°±åŠ 1æŒ‡å‘ä½‡åˆ—çš„æœ€å‰ç«¯ï¼Œå¦‚ä¸‹åœ–æ‰€ç¤ºï¼š<br>
 <div style="text-align: center;"><img style="width: 401px; height: 97px;" alt="Quene" title="Quene" src="images/queneByArray-1.jpg"><br>
 </div>
 <br>
-³o¬O³ÌÂ²³æªº¦î¦C¹ê§@¡A¦ı¬O¥Ñ©ó°}¦Cªº¤j¤p¥²¶·¥ı¨M©w¡A©Ò¥H³oºØ½u©Êªºµ²ºc¦³­Ó°İÃD¡Afront»Prear·|¨ì¹F°}¦Cªº«áºİ¡A¦Ó³o­Ó°}¦C´N¤£¯à¦A¨Ï¥Î¤F¡A
-¬°¤F¸Ñ¨M³o­Ó°İÃD¡A±N°}¦C·í§@Àôª¬¨Ó¨Ï¥Î¡A·ífront©Îrear¨ì¹F°}¦C«áºİ®É¡A´N­«·s±q°}¦C«eºİ¦A´`Àô¡A¤]´N¬O§Î¦¨Àôª¬¦î¦C¡A¦p¤U¹Ï©Ò¥Ü¡G<br>
+é€™æ˜¯æœ€ç°¡å–®çš„ä½‡åˆ—å¯¦ä½œï¼Œä½†æ˜¯ç”±æ–¼é™£åˆ—çš„å¤§å°å¿…é ˆå…ˆæ±ºå®šï¼Œæ‰€ä»¥é€™ç¨®ç·šæ€§çš„çµæ§‹æœ‰å€‹å•é¡Œï¼Œfrontèˆ‡rearæœƒåˆ°é”é™£åˆ—çš„å¾Œç«¯ï¼Œè€Œé€™å€‹é™£åˆ—å°±ä¸èƒ½å†ä½¿ç”¨äº†ï¼Œ
+ç‚ºäº†è§£æ±ºé€™å€‹å•é¡Œï¼Œå°‡é™£åˆ—ç•¶ä½œç’°ç‹€ä¾†ä½¿ç”¨ï¼Œç•¶frontæˆ–rearåˆ°é”é™£åˆ—å¾Œç«¯æ™‚ï¼Œå°±é‡æ–°å¾é™£åˆ—å‰ç«¯å†å¾ªç’°ï¼Œä¹Ÿå°±æ˜¯å½¢æˆç’°ç‹€ä½‡åˆ—ï¼Œå¦‚ä¸‹åœ–æ‰€ç¤ºï¼š<br>
 <div style="text-align: center;"><img style="width: 207px; height: 164px;" alt="Quene" title="Quene" src="images/queneByArray-2.jpg"><br>
 </div>
 <br>
 <br>
-¤£¹L°}¦Cªº®e¶qÁÙ¬O¨ü­­¨î¡A©Ò¥H³o­Ó°}¦CÁÙ¬O·|º¡ªº¡A·ífront = rear®É¡A¦î¦C´Nº¡¤F¡F¦î¦Cªº°ò¥»¾Ş§@¦³¤­¶µ¡G·s¼W¦î¦C¡B¥[¤J¸ê®Æ¡BÅã¥Ü«eºİ¸ê®Æ¡B¨ú¥X«eºİ¸ê®Æ¡BÅã¥Ü©Ò¦³ªº¦î¦C¤¸¯À¡C <br>
+ä¸éé™£åˆ—çš„å®¹é‡é‚„æ˜¯å—é™åˆ¶ï¼Œæ‰€ä»¥é€™å€‹é™£åˆ—é‚„æ˜¯æœƒæ»¿çš„ï¼Œç•¶front = rearæ™‚ï¼Œä½‡åˆ—å°±æ»¿äº†ï¼›ä½‡åˆ—çš„åŸºæœ¬æ“ä½œæœ‰äº”é …ï¼šæ–°å¢ä½‡åˆ—ã€åŠ å…¥è³‡æ–™ã€é¡¯ç¤ºå‰ç«¯è³‡æ–™ã€å–å‡ºå‰ç«¯è³‡æ–™ã€é¡¯ç¤ºæ‰€æœ‰çš„ä½‡åˆ—å…ƒç´ ã€‚ <br>
 
 <br>
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define N 10 <br><br>void createq(int[], int*, int*); <br>void showfront(int[], int, int); <br>void add(int[], int*, int*, int); <br>void del(int[], int*, int*); <br>void showqueue(int[], int, int); <br><br>int main(void) { <br>    int queue[N]; <br>    int front, rear; <br>    int input, select; <br><br>    createq(queue, &amp;front, &amp;rear); <br><br>    while(1) { <br>        printf("\n\n½Ğ¿é¤J¿ï¶µ(-1µ²§ô)¡G"); <br>        printf("\n(1)´¡¤J­È¦Ü¦î¦C"); <br>        printf("\n(2)Åã¥Ü¦î¦C«eºİ"); <br>        printf("\n(3)§R°£«eºİ­È"); <br>        printf("\n(4)Åã¥Ü©Ò¦³¤º®e"); <br>        printf("\n$c&gt;"); <br>        scanf("%d", &amp;select); <br>        <br>        if(select == -1) <br>            break; <br><br>        switch(select) { <br>            case 1: <br>                printf("\n¿é¤J­È¡G"); <br>                scanf("%d", &amp;input); <br>                add(queue, &amp;front, &amp;rear, input); <br>                break; <br>            case 2: <br>                showfront(queue, front, rear); <br>                break; <br>            case 3: <br>                del(queue, &amp;front, &amp;rear); <br>                break; <br>            case 4: <br>                showqueue(queue, front, rear); <br>                break; <br>            default: <br>                printf("\n¿ï¶µ¿ù»~¡I"); <br>        } <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void createq(int queue[], int* front, int* rear) { <br>    int i; <br><br>    for(i = 0; i &lt; N; i++) <br>        queue[i] = 0; <br><br>    *front = *rear = 0; <br>} <br><br>void showfront(int queue[], int front, int rear) { <br>    if(front == rear) <br>        printf("\n¦î¦C¬°ªÅ¡I"); <br>    else <br>        printf("%d", queue[(front+1) % N]); <br>} <br><br>void add(int queue[], int* front, int* rear, int data) { <br>    int f, r; <br>    f = *front; <br>    r = *rear; <br>    r = (r+1) % N; <br><br>    if(f == r) { <br>        printf("\n¦î¦C¤wº¡¡I"); <br>        return; <br>    } <br><br>    queue[r] = data; <br>    *rear = r; <br>} <br><br>void del(int queue[], int* front, int* rear) { <br>    int f, r; <br>    f = *front; <br>    r = *rear; <br><br>    if(f == r) { <br>        printf("\n¦î¦C¬°ªÅ¡I"); <br>        return; <br>    } <br><br>    f = (f+1) % N; <br>    *front = f; <br>} <br><br>void showqueue(int queue[], int front, int rear) { <br>    int i; <br><br>    printf("\n¦î¦C¤º®e¡G"); <br>    for(i = (front+1) % N; i &lt;= rear; i++) <br>        printf("%d ", queue[i]); <br>} <br></pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br>#define N 10 <br><br>void createq(int[], int*, int*); <br>void showfront(int[], int, int); <br>void add(int[], int*, int*, int); <br>void del(int[], int*, int*); <br>void showqueue(int[], int, int); <br><br>int main(void) { <br>    int queue[N]; <br>    int front, rear; <br>    int input, select; <br><br>    createq(queue, &amp;front, &amp;rear); <br><br>    while(1) { <br>        printf("\n\nè«‹è¼¸å…¥é¸é …(-1çµæŸ)ï¼š"); <br>        printf("\n(1)æ’å…¥å€¼è‡³ä½‡åˆ—"); <br>        printf("\n(2)é¡¯ç¤ºä½‡åˆ—å‰ç«¯"); <br>        printf("\n(3)åˆªé™¤å‰ç«¯å€¼"); <br>        printf("\n(4)é¡¯ç¤ºæ‰€æœ‰å…§å®¹"); <br>        printf("\n$c&gt;"); <br>        scanf("%d", &amp;select); <br>        <br>        if(select == -1) <br>            break; <br><br>        switch(select) { <br>            case 1: <br>                printf("\nè¼¸å…¥å€¼ï¼š"); <br>                scanf("%d", &amp;input); <br>                add(queue, &amp;front, &amp;rear, input); <br>                break; <br>            case 2: <br>                showfront(queue, front, rear); <br>                break; <br>            case 3: <br>                del(queue, &amp;front, &amp;rear); <br>                break; <br>            case 4: <br>                showqueue(queue, front, rear); <br>                break; <br>            default: <br>                printf("\né¸é …éŒ¯èª¤ï¼"); <br>        } <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void createq(int queue[], int* front, int* rear) { <br>    int i; <br><br>    for(i = 0; i &lt; N; i++) <br>        queue[i] = 0; <br><br>    *front = *rear = 0; <br>} <br><br>void showfront(int queue[], int front, int rear) { <br>    if(front == rear) <br>        printf("\nä½‡åˆ—ç‚ºç©ºï¼"); <br>    else <br>        printf("%d", queue[(front+1) % N]); <br>} <br><br>void add(int queue[], int* front, int* rear, int data) { <br>    int f, r; <br>    f = *front; <br>    r = *rear; <br>    r = (r+1) % N; <br><br>    if(f == r) { <br>        printf("\nä½‡åˆ—å·²æ»¿ï¼"); <br>        return; <br>    } <br><br>    queue[r] = data; <br>    *rear = r; <br>} <br><br>void del(int queue[], int* front, int* rear) { <br>    int f, r; <br>    f = *front; <br>    r = *rear; <br><br>    if(f == r) { <br>        printf("\nä½‡åˆ—ç‚ºç©ºï¼"); <br>        return; <br>    } <br><br>    f = (f+1) % N; <br>    *front = f; <br>} <br><br>void showqueue(int queue[], int front, int rear) { <br>    int i; <br><br>    printf("\nä½‡åˆ—å…§å®¹ï¼š"); <br>    for(i = (front+1) % N; i &lt;= rear; i++) <br>        printf("%d ", queue[i]); <br>} <br></pre>
 
 <br>
 
-<h2> ¸É¥R</h2>
+<h2> è£œå……</h2>
 
-±z¦pªG¥J²Óºtºâ¹L¤W­±ªºÀôª¬¦î¦C¡A±z·|µo²{¦³¤@­ÓªÅ¶¡·|³Q®ö¶O±¼¡A³o¬O¦]¬°§PÂ_¦î¦C¤wº¡©Î¤wªÅªº±ø¥ó³£¬Ofront =
-rear¡A®ö¶O¤@­ÓªÅ¶¡¹ï²{¦bªº¹q¸£°O¾ĞÅé¦p¦¹¨¬°÷¨Ó»¡¡A¨Ã¤£¬O­Ó¤j°İÃD¡A¦pªG±z¤@©w­n¸Ñ¨M³o­Ó°İÃD¡A¥i¥H¦h¨Ï¥Î¤@­Óflag¨Ó§PÂ_¡A¦pªGflag³]©w¬°
-1¥Bfront = rear¡A«hªí¥Ü¦î¦C¤wº¡¡A¦pªGflag³]©w¬°0«hfront =
-rear¡A«hªí¥Ü¦î¦C¤wªÅ¡A³o¼Ë´N¤£·|®ö¶O¤@­Ó¦î¦CªÅ¶¡¤F¡A´£¨Ñ§ï¨}«áªºµêÀÀ½X¦p¤U¡G <br>
+æ‚¨å¦‚æœä»”ç´°æ¼”ç®—éä¸Šé¢çš„ç’°ç‹€ä½‡åˆ—ï¼Œæ‚¨æœƒç™¼ç¾æœ‰ä¸€å€‹ç©ºé–“æœƒè¢«æµªè²»æ‰ï¼Œé€™æ˜¯å› ç‚ºåˆ¤æ–·ä½‡åˆ—å·²æ»¿æˆ–å·²ç©ºçš„æ¢ä»¶éƒ½æ˜¯front =
+rearï¼Œæµªè²»ä¸€å€‹ç©ºé–“å°ç¾åœ¨çš„é›»è…¦è¨˜æ†¶é«”å¦‚æ­¤è¶³å¤ ä¾†èªªï¼Œä¸¦ä¸æ˜¯å€‹å¤§å•é¡Œï¼Œå¦‚æœæ‚¨ä¸€å®šè¦è§£æ±ºé€™å€‹å•é¡Œï¼Œå¯ä»¥å¤šä½¿ç”¨ä¸€å€‹flagä¾†åˆ¤æ–·ï¼Œå¦‚æœflagè¨­å®šç‚º
+1ä¸”front = rearï¼Œå‰‡è¡¨ç¤ºä½‡åˆ—å·²æ»¿ï¼Œå¦‚æœflagè¨­å®šç‚º0å‰‡front =
+rearï¼Œå‰‡è¡¨ç¤ºä½‡åˆ—å·²ç©ºï¼Œé€™æ¨£å°±ä¸æœƒæµªè²»ä¸€å€‹ä½‡åˆ—ç©ºé–“äº†ï¼Œæä¾›æ”¹è‰¯å¾Œçš„è™›æ“¬ç¢¼å¦‚ä¸‹ï¼š <br>
 
 <pre>Procedure add(queue, n, front, rear, flag, data) <br>    if(front = rear and flag = 1) <br>        then call QUEUE_FULL <br>    queue(rear) &lt;- data <br>    if(front = rear) <br>       then flag &lt;- 1 <br>end add <br><br>Procedure del(queue, n, front, rear, flag, data) <br>    if(front = rear and flag = 0) <br>        then call QUEUE_EMPTY <br>    front &lt;- (front+1) mod n <br>    if(front = rear) <br>        then flag &lt;- 1 <br>end del</pre>
 <br>
