--- a/AlgorithmGossip/QueueByLink.htm
+++ b/AlgorithmGossip/QueueByLink.htm
@@ -27,7 +27,7 @@
   
   
   
-  <meta content="text/html; charset=Big5" http-equiv="content-type">
+  <meta content="text/html; charset=UTF-8" http-equiv="content-type">
 
 
 
@@ -36,7 +36,7 @@
   
   
   
-  <title>¦î¦C - ¨Ï¥ÎÃìµ²¹ê§@¡]C»y¨¥°ÊºA°O¾ĞÅé«Å§i¡^</title>
+  <title>ä½‡åˆ— - ä½¿ç”¨éˆçµå¯¦ä½œï¼ˆCèªè¨€å‹•æ…‹è¨˜æ†¶é«”å®£å‘Šï¼‰</title>
 </head>
 
 
@@ -51,30 +51,30 @@ Gossip@caterpillar</a></h3>
 
 
 
-<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;¦î¦C - ¨Ï¥ÎÃìµ²¹ê§@¡]C»y¨¥°ÊºA°O¾ĞÅé«Å§i¡^</a></h1>
+<h1><a href="AlgorithmGossip.htm">Algorithm Gossip:&nbsp;ä½‡åˆ— - ä½¿ç”¨éˆçµå¯¦ä½œï¼ˆCèªè¨€å‹•æ…‹è¨˜æ†¶é«”å®£å‘Šï¼‰</a></h1>
 
 
 
 
-<h2>»¡©ú</h2>
-¨Ï¥Î°}¦C¨Ó¹ê§@¦î¦C¡A·|¦³¦î¦CªÅ¶¡ªº­­¨î¡A¦pªG¨Ï¥ÎÃìµ²°t¦X°ÊºA°O¾ĞÅé«Å§i¡A´N¤£·|¦³ªø«×ªº­­¨î¡C<br>
-<h2>¸Ñªk</h2>
-¦b¨Ï¥ÎÃìµ²¹ê§@¦î¦C®É¡A¬°¤F¤è«K¡A¨Ï¥Î¤@­ÓªÅªº¸`ÂI¨Ó«ü¦V¦î¦C«eºİ²Ä¤@­Ó¤¸¯À¡A³o­ÓªÅ¸`ÂIªºdataÄæ¦ì¨Ã¤£Àx¦s¸ê®Æ¡A¦Ónext·í§@frontªº¨¤¦â¡A¦p¤U¹Ï©Ò¥Ü¡G<br>
+<h2>èªªæ˜</h2>
+ä½¿ç”¨é™£åˆ—ä¾†å¯¦ä½œä½‡åˆ—ï¼Œæœƒæœ‰ä½‡åˆ—ç©ºé–“çš„é™åˆ¶ï¼Œå¦‚æœä½¿ç”¨éˆçµé…åˆå‹•æ…‹è¨˜æ†¶é«”å®£å‘Šï¼Œå°±ä¸æœƒæœ‰é•·åº¦çš„é™åˆ¶ã€‚<br>
+<h2>è§£æ³•</h2>
+åœ¨ä½¿ç”¨éˆçµå¯¦ä½œä½‡åˆ—æ™‚ï¼Œç‚ºäº†æ–¹ä¾¿ï¼Œä½¿ç”¨ä¸€å€‹ç©ºçš„ç¯€é»ä¾†æŒ‡å‘ä½‡åˆ—å‰ç«¯ç¬¬ä¸€å€‹å…ƒç´ ï¼Œé€™å€‹ç©ºç¯€é»çš„dataæ¬„ä½ä¸¦ä¸å„²å­˜è³‡æ–™ï¼Œè€Œnextç•¶ä½œfrontçš„è§’è‰²ï¼Œå¦‚ä¸‹åœ–æ‰€ç¤ºï¼š<br>
 <div style="text-align: center;"><img style="width: 304px; height: 90px;" alt="Link" title="Link" src="images/queneByLink-1.jpg"><br>
 </div>
 <br>
 <br>
-¬°¤F°t¦X¥H¤WªºªÅ¸`ÂI¡A±N¦î¦C¬O§_¬°ªÅªº§PÂ_¤è¦¡¡A§ï¬°front-&gt;next¬O§_«ü¦V¤U¤@­Ó¸`ÂI¨Ó§¹¦¨¡A¦pªGfront-&gt;next«ü¦VNULL¡Aªí¥ÜÃìµ²¤¤¤wµL¤U¤@­Ó¸ê®Æ¡A©Ò¥H¦î¦C¬°ªÅ¡C<br>
+ç‚ºäº†é…åˆä»¥ä¸Šçš„ç©ºç¯€é»ï¼Œå°‡ä½‡åˆ—æ˜¯å¦ç‚ºç©ºçš„åˆ¤æ–·æ–¹å¼ï¼Œæ”¹ç‚ºfront-&gt;nextæ˜¯å¦æŒ‡å‘ä¸‹ä¸€å€‹ç¯€é»ä¾†å®Œæˆï¼Œå¦‚æœfront-&gt;nextæŒ‡å‘NULLï¼Œè¡¨ç¤ºéˆçµä¸­å·²ç„¡ä¸‹ä¸€å€‹è³‡æ–™ï¼Œæ‰€ä»¥ä½‡åˆ—ç‚ºç©ºã€‚<br>
 <br>
-¥Ñ©ó¥²¶·¦P®ÉºûÅ@front»Prear¨â­Ó¸ê°T¡A¦ÓC»y¨¥¤@¦¸¥u¯à¶Ç¦^¤@­Ó­È¡A¬°¤FÂ²¤Æµ{¦¡ÅŞ¿è¡A§Ú­Ì±Nfront»Prear«Å§i¬°¥ş°ìÅÜ¼Æ¡A¦³¿³½ìªº¸Ü¡A½Ğ¦Û¤v¸ÕµÛ¤£³]¬°¥ş°ìÅÜ¼Æ¨Ó¼¶¼g¡A³o·|Åıµ{¦¡ÅÜ±o½ÆÂø¤@¨Ç¡C <br>
+ç”±æ–¼å¿…é ˆåŒæ™‚ç¶­è­·frontèˆ‡rearå…©å€‹è³‡è¨Šï¼Œè€ŒCèªè¨€ä¸€æ¬¡åªèƒ½å‚³å›ä¸€å€‹å€¼ï¼Œç‚ºäº†ç°¡åŒ–ç¨‹å¼é‚è¼¯ï¼Œæˆ‘å€‘å°‡frontèˆ‡rearå®£å‘Šç‚ºå…¨åŸŸè®Šæ•¸ï¼Œæœ‰èˆˆè¶£çš„è©±ï¼Œè«‹è‡ªå·±è©¦è‘—ä¸è¨­ç‚ºå…¨åŸŸè®Šæ•¸ä¾†æ’°å¯«ï¼Œé€™æœƒè®“ç¨‹å¼è®Šå¾—è¤‡é›œä¸€äº›ã€‚ <br>
 
-<h2> ¹ê§@</h2>
+<h2> å¯¦ä½œ</h2>
 
 <ul>
   <li> C </li>
 </ul>
 
-<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>struct node { <br>    int data; <br>    struct node *next; <br>}; <br><br>typedef struct node getnode; <br><br>void createq(); <br>void showfront(); <br>void addq(int); <br>void delq(); <br>void showqueue(); <br><br>getnode *front, *rear; <br><br>int main(void) { <br>    int input, select; <br><br>    createq(); <br><br>    while(1) { <br>        printf("\n\n½Ğ¿é¤J¿ï¶µ(-1µ²§ô)¡G"); <br>        printf("\n(1)´¡¤J­È¦Ü¦î¦C"); <br>        printf("\n(2)Åã¥Ü¦î¦C«eºİ"); <br>        printf("\n(3)§R°£«eºİ­È"); <br>        printf("\n(4)Åã¥Ü©Ò¦³¤º®e"); <br>        printf("\n$c&gt;"); <br>        scanf("%d", &amp;select); <br>        <br>        if(select == -1) <br>            break; <br><br>        switch(select) { <br>            case 1: <br>                printf("\n¿é¤J­È¡G"); <br>                scanf("%d", &amp;input); <br>                addq(input); <br>                break; <br>            case 2: <br>                showfront(); <br>                break; <br>            case 3: <br>                delq(); <br>                break; <br>            case 4: <br>                showqueue(); <br>                break; <br>            default: <br>                printf("\n¿ï¶µ¿ù»~¡I"); <br>        } <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void createq() { <br>    front = rear = (getnode*) malloc(sizeof(getnode)); <br>    front-&gt;next = rear-&gt;next = NULL; <br>} <br><br>void showfront(){ <br>    if(front-&gt;next == NULL) <br>        printf("\n¦î¦C¬°ªÅ¡I"); <br>    else <br>        printf("\n³»ºİ­È¡G%d", front-&gt;next-&gt;data); <br>} <br><br>void addq(int data) { <br>    getnode *newnode; <br><br>    newnode = (getnode*) malloc(sizeof(getnode)); <br><br>    if(front-&gt;next == NULL)  <br>        front-&gt;next = newnode; <br>    <br>    newnode-&gt;data = data; <br>    newnode-&gt;next = NULL; <br>    rear-&gt;next = newnode; <br>    rear = newnode; <br>} <br><br>void delq() { <br>    getnode* tmpnode; <br><br>    if(front-&gt;next == NULL) { <br>        printf("\n¦î¦C¤wªÅ¡I"); <br>        return; <br>    } <br><br>    tmpnode = front-&gt;next; <br>    front-&gt;next = tmpnode-&gt;next; <br>    free(tmpnode);    <br>} <br><br>void showqueue() { <br>    getnode* tmpnode; <br><br>    tmpnode = front-&gt;next; <br><br>    printf("\n¦î¦C¤º®e¡G"); <br>    while(tmpnode != NULL) { <br>        printf("%d ", tmpnode-&gt;data); <br>        tmpnode = tmpnode-&gt;next; <br>    } <br>} </pre>
+<pre>#include &lt;stdio.h&gt; <br>#include &lt;stdlib.h&gt; <br><br>struct node { <br>    int data; <br>    struct node *next; <br>}; <br><br>typedef struct node getnode; <br><br>void createq(); <br>void showfront(); <br>void addq(int); <br>void delq(); <br>void showqueue(); <br><br>getnode *front, *rear; <br><br>int main(void) { <br>    int input, select; <br><br>    createq(); <br><br>    while(1) { <br>        printf("\n\nè«‹è¼¸å…¥é¸é …(-1çµæŸ)ï¼š"); <br>        printf("\n(1)æ’å…¥å€¼è‡³ä½‡åˆ—"); <br>        printf("\n(2)é¡¯ç¤ºä½‡åˆ—å‰ç«¯"); <br>        printf("\n(3)åˆªé™¤å‰ç«¯å€¼"); <br>        printf("\n(4)é¡¯ç¤ºæ‰€æœ‰å…§å®¹"); <br>        printf("\n$c&gt;"); <br>        scanf("%d", &amp;select); <br>        <br>        if(select == -1) <br>            break; <br><br>        switch(select) { <br>            case 1: <br>                printf("\nè¼¸å…¥å€¼ï¼š"); <br>                scanf("%d", &amp;input); <br>                addq(input); <br>                break; <br>            case 2: <br>                showfront(); <br>                break; <br>            case 3: <br>                delq(); <br>                break; <br>            case 4: <br>                showqueue(); <br>                break; <br>            default: <br>                printf("\né¸é …éŒ¯èª¤ï¼"); <br>        } <br>    } <br><br>    printf("\n"); <br><br>    return 0; <br>} <br><br>void createq() { <br>    front = rear = (getnode*) malloc(sizeof(getnode)); <br>    front-&gt;next = rear-&gt;next = NULL; <br>} <br><br>void showfront(){ <br>    if(front-&gt;next == NULL) <br>        printf("\nä½‡åˆ—ç‚ºç©ºï¼"); <br>    else <br>        printf("\né ‚ç«¯å€¼ï¼š%d", front-&gt;next-&gt;data); <br>} <br><br>void addq(int data) { <br>    getnode *newnode; <br><br>    newnode = (getnode*) malloc(sizeof(getnode)); <br><br>    if(front-&gt;next == NULL)  <br>        front-&gt;next = newnode; <br>    <br>    newnode-&gt;data = data; <br>    newnode-&gt;next = NULL; <br>    rear-&gt;next = newnode; <br>    rear = newnode; <br>} <br><br>void delq() { <br>    getnode* tmpnode; <br><br>    if(front-&gt;next == NULL) { <br>        printf("\nä½‡åˆ—å·²ç©ºï¼"); <br>        return; <br>    } <br><br>    tmpnode = front-&gt;next; <br>    front-&gt;next = tmpnode-&gt;next; <br>    free(tmpnode);    <br>} <br><br>void showqueue() { <br>    getnode* tmpnode; <br><br>    tmpnode = front-&gt;next; <br><br>    printf("\nä½‡åˆ—å…§å®¹ï¼š"); <br>    while(tmpnode != NULL) { <br>        printf("%d ", tmpnode-&gt;data); <br>        tmpnode = tmpnode-&gt;next; <br>    } <br>} </pre>
 <br>
 
 
